Fix video z-index in loading screen so it is visible

--- a/src/components/styles/Loading.css
+++ b/src/components/styles/Loading.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  z-index: 1;
   opacity: 0.6;
   transition: opacity 1.5s ease-in-out;
 }
@@ -76,6 +76,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .loading-clicked {
@@ -336,6 +337,7 @@
   font-size: 60px;
   font-weight: 600;
   text-transform: uppercase;
+  z-index: 2;
 }
 
 .loading-marquee span {
